добавил ручку для повторной отправки ссылки для подтверждения
